🌟 Add challenge repo

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -30,7 +30,7 @@
 
             <!--Challenges-->
             <select id="select_challenges" class="form-control">
-                <option>100DaysOfCode</option>
+                <option>100DaysOfCode!</option>
             </select>
 
 
