--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,39 +12,60 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <style>
+        body {
+            background-color: #15202B;
+        }
+
+        label {
+            font-weight: 800;
+        }
+
+        .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+            background-color: #2B91DA !important;
+        }
+    </style>
 </head>
-<body class="bg-dark text-white">
+<body class="text-white">
 <div class="container-fluid">
     <!--Title-->
     <div class="row pt-3">
         <div class="col-md-12 text-center">
             <h1>🏁 Chequered</h1>
-            <small>Press F2 to edit the selected channel</small>
+            <small>Track Your Challenges!</small>
         </div>
     </div>
 
     <div class="row pt-3">
         <div class="col-md-4">
             <!--Input box-->
-            <input id="input_new_challenge" type="text" class="form-control"
-                   placeholder="Add new habit (Eg: Writing). Press ENTER to add">
-
-            <br>
+            <div class="form-group">
+                <label for="input_new_challenge">Add New Challenge: </label>
+                <input id="input_new_challenge" type="text" class="form-control"
+                       placeholder="Add new habit (Eg: Writing). Press ENTER to add">
+            </div>
 
             <!--Challenges-->
-            <select id="select_challenges" class="form-control">
-            </select>
+            <div class="form-group">
+                <label for="select_challenges">Select Challenge: </label>
+                <select id="select_challenges" class="form-control">
+                </select>
+                <small>Press F2 to edit the selected channel</small>
+            </div>
 
 
         </div>
 
         <!--Final Tweet-->
         <div class="col-md-8">
-            <textarea rows="5" id="textarea_tweet" class="form-control"></textarea>
+            <div class="form-group">
+                <label for="textarea_tweet">Tweet: </label>
+                <textarea rows="5" id="textarea_tweet" class="form-control"></textarea>
+            </div>
             <br/>
 
             <!--Tweet Button-->
-            <button type="button" class="btn btn-outline-primary"><i class="fa fa-send"></i> Tweet</button>
+            <button type="button" class="btn btn-primary"><i class="fa fa-send"></i> Tweet</button>
         </div>
     </div>
 
