◀️ improve delete method

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -60,12 +60,12 @@
         <div class="col-md-8">
             <div class="form-group">
                 <label for="textarea_tweet">Tweet: </label>
-                <textarea rows="5" id="textarea_tweet" class="form-control"></textarea>
+                <textarea maxlength="280" rows="5" id="textarea_tweet" class="form-control"></textarea>
             </div>
             <br/>
 
             <!--Tweet Button-->
-            <button type="button" class="btn btn-primary"><i class="fa fa-send"></i> Tweet</button>
+            <button id="button_tweet" type="button" class="btn btn-primary"><i class="fa fa-send"></i> Tweet</button>
         </div>
     </div>
 
